<resources>
    <string name="app_name">Bus Arrival Announcement System</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="loading">Please Wait..</string>
    <string name="auth_failed">Authentication Failed! Please try again.</string>
    <string name="signed_out">You\'re Signed Out</string>
    <string name="new_route">Create New Route</string>
    <string name="select_route">Select a Route</string>
    <string name="image_content_description">Image Missing</string>
    <string name="new_user_welcome_message">Hi, Thank you for using our application. Lorem ipsum dolor sit amet con.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_successful">Sign Up Successful!</string>
    <string name="get_started">Get Started</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_connection_message">Can\'t connect to the server. Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="logout">Logout</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="find_route">Find Route</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_get_started">GetStartedActivity</string>
    <string name="connect_to_bluetooth_display">Connect to Bluetooth Display</string>
    <string name="search_map_hint">Enter Address, City or Zip Code</string>

</resources>
