<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_gray_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_find"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/find_route" />
    <item
        android:id="@+id/nav_bluetooth"
        android:icon="@drawable/ic_settings_bluetooth_black_24dp"
        android:title="@string/connect_to_bluetooth_display" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/help" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />
</menu>