<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            >
            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:contentDescription="@string/image_content_description"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:text="@string/sign_up_successful"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/new_user_welcome_message"
                />
            <Button
                android:id="@+id/getStartedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/rounded_button_green"
                android:textColor="@color/colorWhite"
                android:text="@string/get_started"

                />

        </LinearLayout>
        </LinearLayout>



    </android.support.v7.widget.CardView>
</RelativeLayout>