<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="@drawable/loginbg"
    android:orientation="vertical">

   <ImageView
       android:layout_gravity="center"
       android:layout_width="100sp"
       android:layout_height="100sp"
       android:src="@drawable/logo"
       android:layout_marginTop="30sp"
       android:contentDescription="@string/image_content_description"
       />

    <android.support.v7.widget.CardView
        android:id="@+id/signInCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameSignInWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp">

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordSignInWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/sign_in"
                android:layout_marginTop="20sp"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15sp"
                android:layout_gravity="center"
                android:id="@+id/signUpLayout"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New User?"
                    android:layout_marginRight="5sp"
                    android:layout_marginEnd="5sp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/goSignUpButton"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/colorWhite"
                    />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>




</LinearLayout>