<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/signUpCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/companySignUpWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/companySignUpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Company Name"
                    android:inputType="text"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameSignUpWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/userNameSignUpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordSignUpWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/passwordSignUpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/retypePasswordSignUpWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/retypePasswordSignUpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Re-type Password"
                    android:inputType="textPassword"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>